# weed

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  stack.yaml  weed.cabal
src/: Main.hs
