name:                weed
version:             0.1.0.0
homepage:            https://github.com/lassik/weed
license:             BSD3
license-file:        LICENSE
author:              Lassi Kortela
maintainer:          lassi@lassi.io
copyright:           Copyright Authors
category:            Utils
build-type:          Simple
cabal-version:       >=1.10

executable weed
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_weed
  build-depends:         base >= 4.7 && < 5
                       , bytestring
                       , filepath
